--- a/wiki/BRAVIA5_24p_230.wiki
+++ b/wiki/BRAVIA5_24p_230.wiki
@@ -1,6 +1,6 @@
 #summary 24p対応BRAVIA-KDL-JP5.lua 230氏版
 
-現バージョンの mencoder には mp4 の処理にバグがあっるぽく、次のように ffmpeg を使うことで H264ToMpegTS = true としたときの処理がうまくいくとのことです。<br>
+230氏からの情報によりますと、現バージョンの mencoder には mp4 の処理にバグがあっるぽく、次のように ffmpeg を使うことで H264ToMpegTS = true としたときの処理がうまくいくとのことです。<br>
 FFmpegは http://oss.netfarm.it/mplayer-win32.php の FFmpeg git rev N-32754-g936d4d4 を使われてるとのことです。<br>
 なお、FFMpeg.exe は  BMS.exe と同じフォルダに置いてください。<br>
 
