Edited wiki page BRAVIA5_24p_230 through web user interface.

--- a/wiki/BRAVIA5_24p_230.wiki
+++ b/wiki/BRAVIA5_24p_230.wiki
@@ -3,251 +3,10 @@
 230氏からの情報によりますと、現バージョンの mencoder には mp4 の処理にバグがあっるぽく、次のように ffmpeg を使うことで H264ToMpegTS = true としたときの処理がうまくいくとのことです。<br>
 FFmpegは http://oss.netfarm.it/mplayer-win32.php の FFmpeg git rev N-32754-g936d4d4 を使われてるとのことです。<br>
 なお、FFMpeg.exe は  BMS.exe と同じフォルダに置いてください。<br>
+H264ToMpegTS = true とすることも忘れないでください。
 
 {{{
 
--- H264 を Mpeg TS にトランスコードする
-H264ToMpegTS = true
-
-
--- この機種がサポートしているメディア情報のリスト
-SUPPORT_MEDIA_LIST = {
-  "image/jpeg:DLNA.ORG_PN=JPEG_SM",
-  "image/jpeg:DLNA.ORG_PN=JPEG_MED",
-  "image/jpeg:DLNA.ORG_PN=JPEG_LRG",
-  "audio/mpeg:DLNA.ORG_PN=MP3",
-  "audio/L16:DLNA.ORG_PN=LPCM",
-  "video/mpeg:DLNA.ORG_PN=MPEG_PS_NTSC",
-  "video/vnd.dlna.mpeg-tts:DLNA.ORG_PN=MPEG_TS_JP_T",
-  "video/vnd.dlna.mpeg-tts:DLNA.ORG_PN=AVC_TS_HD_60_AC3_T;SONY.COM_PN=AVC_TS_HD_60_AC3_T",
-  "video/vnd.dlna.mpeg-tts:DLNA.ORG_PN=AVC_TS_HD_60_AC3;SONY.COM_PN=AVC_TS_HD_60_AC3",
-  "video/mpeg:DLNA.ORG_PN=AVC_TS_HD_60_AC3_ISO;SONY.COM_PN=AVC_TS_HD_60_AC3_ISO",
-  "video/vnd.dlna.mpeg-tts:DLNA.ORG_PN=MPEG_TS_HD_60_L2_T;SONY.COM_PN=HD2_60_T",
-  "video/mpeg:DLNA.ORG_PN=MPEG_TS_HD_60_L2_ISO;SONY.COM_PN=HD2_60_ISO",
-  "video/vnd.dlna.mpeg-tts:DLNA.ORG_PN=MPEG_TS_SD_60_AC3_T",
-  "video/vnd.dlna.mpeg-tts:DLNA.ORG_PN=MPEG_TS_SD_60_L2_T",
-  "video/vnd.dlna.mpeg-tts:DLNA.ORG_PN=AVC_TS_HD_24_AC3_T;SONY.COM_PN=AVC_TS_HD_24_AC3_T",
-  "video/vnd.dlna.mpeg-tts:DLNA.ORG_PN=AVC_TS_HD_24_AC3;SONY.COM_PN=AVC_TS_HD_24_AC3",
-  "video/mpeg:DLNA.ORG_PN=AVC_TS_HD_24_AC3_ISO;SONY.COM_PN=AVC_TS_HD_24_AC3_ISO",
-  "video/vnd.dlna.mpeg-tts:DLNA.ORG_PN=AVC_TS_JP_AAC_T",
-  "video/x-mp2t-mphl-188:*"
-}
-
-
---[[
- GetMimeType 関数
-
- メディアファイルに応じたメディア情報を返す。
-
- 引数：
-   fname: ファイル名
-   minfo: MediaInfo.dll などから得られた情報
-]]
-function GetMimeType(fname, minfo)
-  
-  if minfo.General.Format == "" then return "" end
-  
-  if minfo.General.Format == "NowRecording" then
-    -- 録画中のファイルは MPEG-TS と仮定する。
-    return "video/mpeg:"
-           .."DLNA.ORG_PN=MPEG_TS_HD_60_L2_ISO;"
-           .."SONY.COM_PN=HD2_60_ISO;"
-           .."DLNA.ORG_FLAGS=8d700000000000000000000000000000;"
-           .."DLNA.ORG_OP=11;DLNA.ORG_CI=0"
-  end
-
-  local ext = string.lower(string.match(fname, "%.(.-)$"))
-
-  if ext == "jpg" then
-    return "image/jpeg:DLNA.ORG_PN=JPEG_LRG;"
-     .."DLNA.ORG_FLAGS=8cf00000000000000000000000000000"
-  end
-
-  if ext == "mp3" then
-    return "audio/mpeg:DLNA.ORG_PN=MP3;"
-     .."DLNA.ORG_FLAGS=8d700000000000000000000000000000"
-  end
-  
-  if ext == "wav" then
-    return "audio/L16:DLNA.ORG_PN=LPCM;"
-     .."DLNA.ORG_FLAGS=8d700000000000000000000000000000"
-  end
-  
-  if minfo.Video.Format == "" then return "" end
-  
-  local res = "video/x-mp2t-mphl-188:*;DLNA.ORG_OP=11;DLNA.ORG_CI=0"
-  local fr = string.sub(minfo.Video.FrameRate, 1, 2)
-
-  if minfo.Video.Format == "MPEG Video" or minfo.Video.Format == "AVC" then
-    if minfo.General.Format == "BDAV" then
-      -- NTSC?
-      if fr == "29" or fr == "59" or minfo.Video.Standard == "NTSC" then
-        res = "video/vnd.dlna.mpeg-tts:"
-         .."DLNA.ORG_PN=MPEG_TS_JP_T;"
-         .."DLNA.ORG_FLAGS=8d700000000000000000000000000000;"
-         .."DLNA.ORG_OP=11;DLNA.ORG_CI=0"
-
-        -- AVCHD?
-        if minfo.Video.Format == "AVC" then
-          if minfo.Audio.Format == "AC-3" then
-            res = "video/vnd.dlna.mpeg-tts:"
-             .."DLNA.ORG_PN=AVC_TS_HD_60_AC3_T;"
-             .."SONY.COM_PN=AVC_TS_HD_60_AC3_T;"
-             .."DLNA.ORG_FLAGS=8d700000000000000000000000000000;"
-             .."DLNA.ORG_OP=11;DLNA.ORG_CI=0"
-          elseif minfo.Audio.Format == "AAC" then
-            res = "video/vnd.dlna.mpeg-tts:"
-             .."DLNA.ORG_PN=AVC_TS_JP_AAC_T;"
-             .."DLNA.ORG_FLAGS=8d700000000000000000000000000000;"
-             .."DLNA.ORG_OP=11;DLNA.ORG_CI=0"
-          end
-        else
-          -- HD?
-          if tonumber(minfo.Video.Width) > 1000 then
-            -- AAC etc.
-            res = "video/vnd.dlna.mpeg-tts:"
-             .."DLNA.ORG_PN=MPEG_TS_HD_60_L2_T;"
-             .."SONY.COM_PN=HD2_60_T;"
-             .."DLNA.ORG_FLAGS=8d700000000000000000000000000000;"
-             .."DLNA.ORG_OP=11;DLNA.ORG_CI=0"
-          else
-            -- AC3?
-            if minfo.Audio.Format == "AC-3" then
-              res = "video/vnd.dlna.mpeg-tts:"
-               .."DLNA.ORG_PN=MPEG_TS_SD_60_AC3_T;"
-               .."DLNA.ORG_FLAGS=8d700000000000000000000000000000;"
-               .."DLNA.ORG_OP=11;DLNA.ORG_CI=0"
-            else
-              -- AAC etc.
-              res = "video/vnd.dlna.mpeg-tts:"
-               .."DLNA.ORG_PN=MPEG_TS_SD_60_L2_T;"
-               .."DLNA.ORG_FLAGS=8d700000000000000000000000000000;"
-               .."DLNA.ORG_OP=11;DLNA.ORG_CI=0"
-            end
-          end
-        end
-      
-      -- 24p(not PAL)?
-      elseif fr ~= "25" and fr ~= "50" then
-        res = "video/vnd.dlna.mpeg-tts:"
-         .."DLNA.ORG_PN=AVC_TS_HD_24_AC3_T;"
-         .."SONY.COM_PN=AVC_TS_HD_24_AC3_T;"
-         .."DLNA.ORG_FLAGS=8d700000000000000000000000000000;"
-         .."DLNA.ORG_OP=11;DLNA.ORG_CI=0"
-      end
-      
-      return res
-
-    elseif minfo.General.Format == "MPEG-TS" then
-      -- NTSC?
-      if fr == "29" or fr == "59" or minfo.Video.Standard == "NTSC" then
-        -- AVCHD?
-        if minfo.Video.Format == "AVC" and minfo.Audio.Format == "AC-3" then
-          -- [[
-          res = "video/mpeg:"
-           .."DLNA.ORG_PN=AVC_TS_HD_60_AC3_ISO;"
-           .."SONY.COM_PN=AVC_TS_HD_60_AC3_ISO;"
-           .."DLNA.ORG_FLAGS=8d700000000000000000000000000000;"
-           .."DLNA.ORG_OP=11;DLNA.ORG_CI=0"
-          -- ]]
-          --[[ これも同じ？
-          res = "video/vnd.dlna.mpeg-tts:"
-           .."DLNA.ORG_PN=AVC_TS_HD_60_AC3;"
-           .."SONY.COM_PN=AVC_TS_HD_60_AC3;"
-           .."DLNA.ORG_FLAGS=8d700000000000000000000000000000;"
-           .."DLNA.ORG_OP=11;DLNA.ORG_CI=0"
-          -- ]]
-        else
-          res = "video/mpeg:"
-           .."DLNA.ORG_PN=MPEG_TS_HD_60_L2_ISO;"
-           .."SONY.COM_PN=HD2_60_ISO;"
-           .."DLNA.ORG_FLAGS=8d700000000000000000000000000000;"
-           .."DLNA.ORG_OP=11;DLNA.ORG_CI=0"
-        end
-
-      -- 24p(not PAL)?
-      elseif fr ~= "25" and fr ~= "50" then
-        -- [[
-        res = "video/mpeg:"
-         .."DLNA.ORG_PN=AVC_TS_HD_24_AC3_ISO;"
-         .."SONY.COM_PN=AVC_TS_HD_24_AC3_ISO;"
-         .."DLNA.ORG_FLAGS=8d700000000000000000000000000000;"
-         .."DLNA.ORG_OP=11;DLNA.ORG_CI=0"
-        -- ]]
-        --[[ これも同じ？
-        res = "video/vnd.dlna.mpeg-tts:"
-         .."DLNA.ORG_PN=AVC_TS_HD_24_AC3;"
-         .."SONY.COM_PN=AVC_TS_HD_24_AC3;"
-         .."DLNA.ORG_FLAGS=8d700000000000000000000000000000;"
-         .."DLNA.ORG_OP=11;DLNA.ORG_CI=0"
-        -- ]]
-      end
-      return res
-    end
-  end
-
-  if minfo.General.Format == "MPEG-PS"
-   -- NTSC?
-   and (fr == "29" or fr == "59" or minfo.Video.Standard == "NTSC")
-   -- SD?
-   and tonumber(minfo.Video.Width) < 1000
-   -- アスペクト比=16/9 ?
-   and minfo.Video.DisplayAspectRatio == "1.778" then
-
-    return "video/mpeg:DLNA.ORG_PN=MPEG_PS_NTSC;"
-     .."DLNA.ORG_FLAGS=8d700000000000000000000000000000;"
-     .."DLNA.ORG_OP=11;DLNA.ORG_CI=0"
-
-  end
-  
-  if H264ToMpegTS and minfo.Video.Format == "AVC"
-   -- CFR?
-   and minfo.Video.FrameRate_Mode ~= "VFR"
-   -- アスペクト比=16/9 ?
-   and minfo.Video.DisplayAspectRatio == "1.778" then
-
-    -- NTSC?
-    if  fr == "29" or fr == "59" or minfo.Video.Standard == "NTSC" then
-      return "video/mpeg:"
-       .."DLNA.ORG_PN=AVC_TS_HD_60_AC3_ISO;"
-       .."SONY.COM_PN=AVC_TS_HD_60_AC3_ISO;"
-       .."DLNA.ORG_FLAGS=8d700000000000000000000000000000;"
-       .."DLNA.ORG_OP=11;DLNA.ORG_CI=0"
-       ..":::TRANS:::" -- トランスコードが必要なことをBMSに伝える
-     
-       --[[
-        つぶやき：AVC_TS_JP_AAC_T とかも使えば AAC などにも対応できるかも。
-        もっとも、音声変換はもともと負荷が低いのであまり意味がないかも。
-       ]]
-    end
-    
-    -- 24p(not PAL)?
-    if fr ~= "25" and fr ~= "50" then
-      return "video/mpeg:"
-       .."DLNA.ORG_PN=AVC_TS_HD_24_AC3_ISO;"
-       .."SONY.COM_PN=AVC_TS_HD_24_AC3_ISO;"
-       .."DLNA.ORG_FLAGS=8d700000000000000000000000000000;"
-       .."DLNA.ORG_OP=11;DLNA.ORG_CI=0"
-       ..":::TRANS:::" -- トランスコードが必要なことをBMSに伝える
-    end
-  end
-
-  return "video/mpeg:DLNA.ORG_PN=MPEG_PS_NTSC;"
-   .."DLNA.ORG_FLAGS=8d700000000000000000000000000000;"
-   .."DLNA.ORG_OP=11;DLNA.ORG_CI=0"
-   ..":::TRANS:::" -- トランスコードが必要なことをBMSに伝える
-end
-
-
---[[
- GetTranscodeCommand 関数
- 
- トランスコードのコマンドを返す。
-
- 引数：
-   fname: ファイル名
-   minfo: MediaInfo.dll などから得られた情報
-]]
 function GetTranscodeCommand(fname, minfo)
 
   local aspect = minfo.Video.DisplayAspectRatio
