--- a/wiki/BRAVIA5_230.wiki
+++ b/wiki/BRAVIA5_230.wiki
@@ -5,7 +5,7 @@ FFmpegは http://oss.netfarm.it/mplayer-win32.php の FFmpeg git rev N-32754-g93
 なお、FFMpeg.exe は  BMS.exe と同じフォルダに置いてください。<br>
 H264ToMpegTS = true とすることも忘れないでください。<br>
 <br>
-GetTranscodeCommand 関数の分のみです。他の部分はオリジナルのままで OK です。
+※※※GetTranscodeCommand 関数の分のみです。他の部分はオリジナルのままで OK です。※※※
 
 {{{
 
