--- a/wiki/BRAVIA5_230.wiki
+++ b/wiki/BRAVIA5_230.wiki
@@ -1,4 +1,4 @@
-#summary 24p対応BRAVIA-KDL-JP5.lua 230氏版
+#summary BRAVIA-KDL-JP5.lua 230氏版
 
 230氏からの情報によりますと、現バージョンの mencoder には mp4 の処理にバグがあるっぽく、次のようにして GetTranscodeCommand 関数内で ffmpeg を使うことで H264ToMpegTS = true としたときの処理がうまくいくとのことです。<br>
 FFmpegは http://oss.netfarm.it/mplayer-win32.php で配布されている FFmpeg git rev N-32754-g936d4d4 を使われてるとのことです。<br>
