--- a/wiki/Informations.wiki
+++ b/wiki/Informations.wiki
@@ -5,7 +5,7 @@
  * http://oss.netfarm.it/mplayer-win32.php にて、MPlayer/MEncoder rev 34118 の配布が開始されましたが、当方で試す限り、音ずれなどの問題が発生します。そのような症状が出てしまう場合は、http://sourceforge.net/projects/mplayer-win32/files/MPlayer%20and%20MEncoder/ の rev 33883 を使用してください。
 
 
- * 204氏によりますと、ブラビア EX700 では、DLNA.ORG_PN=AVC_TS_HD_60_AC3_ISO の指定で、AC-3 音声以外も再生できるとのことです。<br> 
+ * 204氏によりますと、ブラビア EX700 では、DLNA.ORG_PN=AVC_TS_HD_60_AC3_ISO の指定で、AC-3 音声以外も再生できるとのことです。 
  同じ機種の方は、BRAVIA-KDL-JP5.lua 内の<br>
  if minfo.Video.Format == "AVC" and minfo.Audio.Format == "AC-3" then <br>という箇所を<br>
  if minfo.Video.Format == "AVC" then<br>に変更してお試しください。もっとも、AAC 音声の場合は、DLNA.ORG_PN=AVC_TS_JP_AAC_T を使う方がよいのかもしれません。なにせ資料が不足していますのでいろいろ試してみていただけると助かります。
