Edited wiki page ClinetsInformation through web user interface.

--- a/wiki/ClinetsInformation.wiki
+++ b/wiki/ClinetsInformation.wiki
@@ -8,4 +8,4 @@
 
 == ユーザーから情報提供があったもの ==
  * SONY Bravia KDL-32J5、KDL-□□EX700、KDL-40HX800
- * REGZA　「DLNAサーバーを認識することを確認」「ファイル名の表示を確認」とのことですので、REGZA専用スクリプトを誰か作成してくれれば動きそう。
+ * REGZA　「DLNAサーバーを認識することを確認」「ファイル名の表示を確認」とのことですので、REGZA専用スクリプトを誰かが作成してくれれば動きそう。
