Edited wiki page Clients through web user interface.

--- a/wiki/Clients.wiki
+++ b/wiki/Clients.wiki
@@ -1,7 +1,7 @@
 #summary 動作が確認されているクライアントの情報
 
 = 動作が確認されているクライアントの情報 =
-
+ここに掲載されているものについて完璧な動作を保障するものではありませんのであしからず。
 == 作者が実際に確認したもの ==
  * SONY Bravia KDL-32F1
  * iPhone 4 用 Media Link Player Lite 1.1.8
