--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -1,6 +1,6 @@
 #summary クライアント追加希望はこちらへ。
 
-ここにクライアント追加希望を貼っておくと、そのクライアント用スクリプトが作成される可能性が高まるかもしれません。ご希望の方は、少なくとも GPI.exe の実行結果を貼ってください。
+ここにクライアント追加希望を貼っておくと、そのクライアント用スクリプトが作成される可能性が高まるかもしれません。ご希望の方は、少なくとも GPI.exe の実行結果（以下「GPI」）を貼ってください。
 
 例：
 {{{
@@ -21,3 +21,4 @@ http-get:*:application/x-dtcp1;CONTENTFORMAT="video/vnd.dlna.mpeg-tts":DLNA.ORG_
 http-get:*:application/x-dtcp1;CONTENTFORMAT="video/vnd.dlna.mpeg-tts":DLNA.ORG_PN=DTCP_MPEG_TS_SD_60_L2_T;SONY.COM_PN=DTCP_SESF_60_L2_T;DLNA.ORG_FLAGS=8d710000000000000000000000000000
 http-get:*:video/x-mp2t-mphl-188:*
 }}}
+なお、GPI は {{{ と }}} で囲って貼っていただけると上の例のように割と見やすくなります。
