Edited wiki page MyGPI through web user interface.

--- a/wiki/MyGPI.wiki
+++ b/wiki/MyGPI.wiki
@@ -22,4 +22,4 @@ http-get:*:application/x-dtcp1;CONTENTFORMAT="video/vnd.dlna.mpeg-tts":DLNA.ORG_
 http-get:*:video/x-mp2t-mphl-188:*
 }}}
 なお、GPI は `{{{` と `}}}` で囲って貼っていただけると上の例のように割と見やすく表示されます。<br>
-また、「BRAVIA KDL-40J5 の GPI は、BRAVIA KDL-32F1 と同じです」というような情報も地味ながら貴重な情報なのではないかと思います。
+また、「BRAVIA KDL-40J5 の GPI は、BRAVIA KDL-32F1 と同じです。」というような情報も地味ながら貴重な情報なのではないかと思います。
