--- a/wiki/Informations.wiki
+++ b/wiki/Informations.wiki
@@ -17,3 +17,5 @@
  に変更してお試しください。もっとも、AAC 音声の場合は、DLNA.ORG_PN=AVC_TS_JP_AAC_T を使う方がよいのかもしれません。なにせ資料が不足していますのでいろいろ試してみていただけると助かります。
 
  * [BRAVIA5_230] - BRAVIA-KDL-JP5.lua で、H264ToMpegTS = true としてもうまくいかない方は参照してください。
+
+ * DNS での名前解決に時間がかかる環境で、BMS の速度が著しく低下するという症状を確認しました。次のバージョンで対策を入れます。うちでは Windows 7 にするとそのような症状になりました。
