Edited wiki page Informations through web user interface.

--- a/wiki/Informations.wiki
+++ b/wiki/Informations.wiki
@@ -19,3 +19,5 @@
  * [BRAVIA5_230] - BRAVIA-KDL-JP5.lua で、H264ToMpegTS = true としてもうまくいかない方は参照してください。
 
  * DNS での名前解決に時間がかかる環境で、BMS の反応速度が著しく低下するという症状を確認しました。次のバージョンで対策を入れます。うちでは Windows 7 にするとそのような症状になりました。
+
+ * 環境によっては、Windows 起動直後、ネットワークで通信エラーが発生するようです。次のバージョンで対策を入れます。うちでは Windows 7 にするとそのような症状になりました。
