--- a/wiki/Informations.wiki
+++ b/wiki/Informations.wiki
@@ -20,4 +20,4 @@
 
  * DNS での名前解決に時間がかかる環境で、BMS の反応速度が著しく低下するという症状を確認しました。次のバージョンで対策を入れます。うちでは Windows 7 にするとそのような症状になりました。
 
- * 環境によっては、Windows 起動直後、ネットワークで通信エラーが発生するようです。次のバージョンで対策を入れます。うちでは Windows 7 にするとそのような症状になりました。
+ * 環境によっては、Windows 起動から一定時間（1分ぐらい？）経過しないと、ネットワーク通信ができないみたいです。
