Edited wiki page Informations through web user interface.

--- a/wiki/Informations.wiki
+++ b/wiki/Informations.wiki
@@ -18,6 +18,6 @@
 
  * [BRAVIA5_230] - BRAVIA-KDL-JP5.lua で、H264ToMpegTS = true としてもうまくいかない方は参照してください。
 
- * DNS での名前解決に時間がかかる環境で、BMS の反応速度が著しく低下するという症状を確認しました。次のバージョンで対策を入れます。うちでは Windows 7 にするとそのような症状になりました。
+ * DNS での名前解決に時間がかかる環境で、BMS の反応速度が著しく低下するという症状を確認しました。最新版で対策済みです。うちでは Windows 7 にするとそのような症状になりました。
 
- * 環境によっては、Windows 起動から一定時間（1分ぐらい？）経過しないと、ネットワーク通信の一部の機能が正常動作しないみたいです。そのため BMS が無反応になる場合があるという症状を確認しました。次のバージョンで対策を入れます。うちでは Windows 7 にするとそのような症状になりました。
+ * 環境によっては、Windows 起動から一定時間（1分ぐらい？）経過しないと、ネットワーク通信の一部の機能が正常動作しないみたいです。そのため BMS が無反応になる場合があるという症状を確認しました。最新版で対策済みです。うちでは Windows 7 にするとそのような症状になりました。
