Edited wiki page SVME970 through web user interface.

--- a/wiki/SVME970.wiki
+++ b/wiki/SVME970.wiki
@@ -13,11 +13,11 @@
  <br>
  以上のことから、この機種でのトランスコ再生は、次のステップになります。<br>
  <br>  
- １：　トランスコ再生したいメディアを「長押し」して、メモリに転送する。
+ １：　トランスコ再生したいメディアをリスト上で「長押し」して、メモリに転送する。
   これにより KEEP フォルダ内に再生できるファイルが完成します。<br>
   同時に、再生できないファイルがメモリに転送されますが、この再生できないファイルは消去してかまいません。<br>
   なお、長押し（メモリに転送）でなく、普通の再生ですと、再生エラーで中断するので、ファイルが完成しません。<br>
- ２：　もう一度、トランスコ再生したいメディアを「長押し」して、メモリに転送する。
+ ２：　もう一度、トランスコ再生したいメディアをリスト上で「長押し」して、メモリに転送する。
   これにより、KEEP フォルダ内の完成ファイルがメモリに転送されます。<br>
   転送が終了すれば、ビデオメニューからメモリ内の完成ファイルを再生できます。<br>
   なお、トランスコードを KEEP モードで行うと、KEEP フォルダ内に完成ファイルが溜まっていきますので、不要なファイルは適時消去してください。「トランスコファイルの消去」によりキープしてあるファイルを個別に消去することもできます。
