Edited wiki page SVME970 through web user interface.

--- a/wiki/SVME970.wiki
+++ b/wiki/SVME970.wiki
@@ -25,7 +25,6 @@
 
 = その他 =
   
- * このクライアントでは（バージョンアップで修正されるかもしれませんが）、リスト内の総メディア数が動的に変更された場合の処理に不具合があるようで、メディアフォルダ内に、ログファイルなどの再生できないファイルが含まれていると「コンテンツ情報が取得できませんでした」というエラーメッセージが出る場合があるようです。
-  そのため、そのようなファイルもメディアファイルであることにしてその症状を回避しています。（スクリプトファイル内の「注１」という箇所）
+ * このクライアントでは（バージョンアップで修正されるかもしれませんが）、リスト内の総メディア数が動的に変更された場合の処理に不具合があるようで、メディアフォルダ内に、ログファイルなどの再生できないファイルが含まれていると「コンテンツ情報が取得できませんでした」というエラーメッセージが出る場合があるようです。そのため、そのようなファイルもメディアファイルであることにしてその症状を回避しています。（スクリプトファイル内の「注１」という箇所）
   
  * mencoder による TS ファイルや MP4 ファイルのデコードには少し不具合があるみたいです。他のソフトで余分なデータを取り除くなどして対処してください。
