Edited wiki page SVME970 through web user interface.

--- a/wiki/SVME970.wiki
+++ b/wiki/SVME970.wiki
@@ -5,6 +5,10 @@
  Panasonic ビエラ・ワンセグ SV-ME970 用スクリプトを使用するには、libfaac.dll が必要です。<br>
  http://oss.netfarm.it/mplayer-win32.php などからダウンロードして、BMS.exe と同じフォルダに配置してください。
 
+= 再生できるファイル =
+
+ http://panasonic.jp/support/viera_1/faq/sv_me970/index.html 内の、「どんなビデオファイル、音楽を再生できるか？」という章をご覧ください。
+
 = トランスコ再生について =
   
  この機種の MP4 では（この機種に限らないのかもしれませんが）、トランスコしながら少しずつデータを送信したのではうまく再生できないようです（リアルタイムでの再生はもちろんそれをメモリに保存したものも再生できない）。<br>
