Edited wiki page Informations through web user interface.

--- a/wiki/Informations.wiki
+++ b/wiki/Informations.wiki
@@ -21,3 +21,5 @@
  * DNS での名前解決に時間がかかる環境で、BMS の反応速度が著しく低下するという症状を確認しました。最新版で対策済みです。うちでは Windows 7 にするとそのような症状になりました。
 
  * 環境によっては、Windows 起動から一定時間（1分ぐらい？）経過しないと、ネットワーク通信の一部の機能が正常動作しないみたいです。そのため BMS が無反応になる場合があるという症状を確認しました。最新版で対策済みです。うちでは Windows 7 にするとそのような症状になりました。
+
+ * [MP4] - MP4 について。
