Edited wiki page MP4 through web user interface.

--- a/wiki/MP4.wiki
+++ b/wiki/MP4.wiki
@@ -1,7 +1,7 @@
-#summary MP4 コンテナについて
+#summary MP4 のストリーミング再生について
 
- MP4 コンテナファイル（以下MP4）をトランスコードなしで再生できると謳っている機器でも、まだメディアフォーマットとしての成熟度が足りないためか、MP4 でさえあれば必ず再生できるというわけではないようです。<br>
- そして、BMS はトランスコードなしで再生できる機器に対しては、単にデータをそのまま送信するだけですので、BMSの設定でどうにかなるというものでもありません。<br>
+ MP4 コンテナ形式のファイル（以下MP4）をトランスコードなしで再生（ストリーミング再生）できると謳っている機器でも、まだメディアフォーマットとしての成熟度が足りないためか、MP4 でさえあれば必ず再生できるというわけではないようです。<br>
+ そして、ストリーミング再生は、単にファイルの内容をそのまま送信するだけですので、BMS 側の設定でどうにかなるというものでもありません。<br>
  そこで次のような点をチェックしてみてください。
  # 再生できない MP4 を USB メモリなどに入れて直接再生してみる。この場合も再生できないのであれば、DLNA 上からも再生できないのは当然と思われます。
  # http://www.alpha.co.jp/biz/products/dlna/mlplayer/convert_to_mp4.shtml によると、DLNA と相性の悪いMP4 も存在するようです。リンク先の記事の最後にあるように、MP4BOX を使用して変換してみてください。 
