Edited wiki page Informations through web user interface.

--- a/wiki/Informations.wiki
+++ b/wiki/Informations.wiki
@@ -22,4 +22,4 @@
 
  * 環境によっては、Windows 起動から一定時間（1分ぐらい？）経過しないと、ネットワーク通信の一部の機能が正常動作しないみたいです。そのため BMS が無反応になる場合があるという症状を確認しました。最新版で対策済みです。うちでは Windows 7 にするとそのような症状になりました。
 
- * [MP4] - MP4 について。
+ * [MP4] - MP4 のストリーミング再生について。
