Edited wiki page TEMP through web user interface.

--- a/wiki/TEMP.wiki
+++ b/wiki/TEMP.wiki
@@ -7,6 +7,6 @@
  * ＞長いファイル名がリストに表示されない
  バグがないか調査してみますが、BMSでは、ファイル名をそのままURI情報に利用したりしますので（おそらくPMSでは短めの仮想ファイル名に置き換えている）、できればファイル名を短くしてください。このようなBMSの仕様には、実在ファイル名と仮想ファイル名の同期が取れているかを心配する必要がないなどのメリットもありますので、今のところ変更する予定はありません。Windows特有の8.3形式の短いファイル名の利用も考えましたが、Windows上で「8.3形式のファイル名を作成しない」という設定も可能みたいなのでやめました。
  * ＞mkvの音声多重ファイルで音声・字幕を選択する方法はないのでしょうか？
- スクリプトを改造すれば可能です。具体的な内容を示すことは、すぐにはできそうもないので、ISO DVD の設定を参考にご自分でチャレンジするか、他の有識者の意見を参考にしてください。逆にスクリプト改造例を挙げていただけると他の方の参考にもなり大変助かります。m(_ _)m
+ スクリプトを改造すれば可能です。具体的な内容を示すことは、すぐにはできそうもないので、ISO DVD の設定を参考にご自分でチャレンジするか、他の有識者の意見を参考にしてください。逆にスクリプト改造例を挙げていただけると他の方の参考にもなり大変助かります。m(＿)m
  * ＞4:3のaviでアスペクト比が正しくないように思われる
  BRAVIA-KDL-JP11.lua 内のコードでは AVI かどうかで特殊な処理をしているわけではないので、BRAVIA-KDL-JP11.lua 内のコードにバグがあるとは考えにくいのですが、もし気づいたことがあればお知らせください。なお、もし、もともとアスペクト比がおかしなファイルである場合は、TSUIKA.txt の「おまけ」に書いてあるように、個別のスクリプトを作る手もあります。たしかAVIにはアスペクト比情報が保持されてはいないので、そもそも4:3でない可能性もあります。ちなみに私の手元にある多くのAVIでは4:3でないものも多いです（そういう意味でもAVIは欠陥のある形式ですので、アスペクト比が保持されるMP4などへ変換されることをお勧めします）。
