Edited wiki page TEMP through web user interface.

--- a/wiki/TEMP.wiki
+++ b/wiki/TEMP.wiki
@@ -9,4 +9,4 @@
  * ＞mkvの音声多重ファイルで音声・字幕を選択する方法はないのでしょうか？
  スクリプトを改造すれば可能です。具体的な内容を示すことは、すぐにはできそうもないので、ISO DVD の設定を参考にご自分でチャレンジするか、他の有識者の意見を参考にしてください。逆にスクリプト改造例を挙げていただけると他の方の参考にもなり大変助かります。m(＿)m
  * ＞4:3のaviでアスペクト比が正しくないように思われる
- BRAVIA-KDL-JP11.lua 内のコードでは AVI かどうかで特殊な処理をしているわけではないので、BRAVIA-KDL-JP11.lua 内のコードにバグがあるとは考えにくいのですが、もし気づいたことがあればお知らせください。なお、もし、もともとアスペクト比がおかしなファイルである場合は、TSUIKA.txt の「おまけ」に書いてあるように、個別のスクリプトを作る手もあります。たしかAVIにはアスペクト比情報が保持されてはいないので、そもそも4:3でない可能性もあります。ちなみに私の手元にある多くのAVIでは4:3でないものも多いです（そういう意味でもAVIは欠陥のある形式ですので、アスペクト比が保持されるMP4などへ変換されることをお勧めします）。
+ BRAVIA-KDL-JP11.lua 内のコードでは AVI かどうかで特殊な処理をしているわけではないので、BRAVIA-KDL-JP11.lua 内のコードにバグがあるとは考えにくいのですが、もし気づいたことがあればお知らせください。なお、もし、もともとアスペクト比がおかしなファイルである場合は、TSUIKA.txt の「おまけ」に書いてあるように、個別のスクリプトを作る手もあります。たしかAVIにはアスペクト比情報が保持されてはいないので、そもそも4:3でない可能性もあります。ちなみに私の手元にある多くのAVIでは4:3ではなく3:2や1:1のものも多いです（そういう意味でもAVIは欠陥のある形式ですので、アスペクト比が保持されるMP4などへ変換されることをお勧めします）。
