Edited wiki page TEMP through web user interface.

--- a/wiki/TEMP.wiki
+++ b/wiki/TEMP.wiki
@@ -5,7 +5,7 @@
  * ＞環境：KLD-40HX720 bms1.2.111207 使用スクリプト：BRAVIA-KDL-JP11.lua　TS mp4(AVC AAC) mkv(AVC AAC) avi(DivX MP3)など再生出来ます。
  これは、HX720もCX400と同じく、MP4 をトランスこなしで再生できる機種であるという意味と解釈してよろしいのでしょうか？もしそうであるなら、common.lua で正式対応しますが。
  * ＞長いファイル名がリストに表示されない
- バグがないか調査してみますが、BMSでは、ファイル名をそのままURI情報に利用したりしますので（おそらくPMSでは短めの仮想ファイル名に置き換えている）、できればファイル名を短くしてください。このようなBMSの仕様には、実在ファイル名と仮想ファイル名の同期が取れているかを心配する必要がないなどのメリットもありますので、今のところ変更する予定はありません。Windows特有の8.3形式の短いファイル名の利用も考えましたが、Windows上で「8.3形式のファイル名を作成しない」という設定も可能みたいなのでやめました。
+ バグがないか調査してみますが、BMSでは、ファイル名をそのままURI情報に利用したりしますので（おそらくPMSでは短めの仮想ファイル名に置き換えている）、できればファイル名を短くしてください。このようなBMSの仕様には、実在ファイル名と仮想ファイル名の同期が取れているかを心配する必要がないなどのメリットもありますので、今のところ変更する予定はありません。Windows特有の8.3形式の短いファイル名の利用も考えましたが、Windows上で「8.3形式のファイル名を作成しない」という設定も可能みたいなのでやめました。<br>クライアントがどのぐらいの長さのURI情報などを許容するかはクライアントにより区々だと思われるところ、仮に許容範囲を超えたために生じている症状であるなら、上記の使用を維持する限りは、ファイル名を短くする以外には方法がないです。
  * ＞mkvの音声多重ファイルで音声・字幕を選択する方法はないのでしょうか？
  スクリプトを改造すれば可能です。具体的な内容を示すことは、すぐにはできそうもないので、ISO DVD の設定を参考にご自分でチャレンジするか、他の有識者の意見を参考にしてください。逆にスクリプト改造例を挙げていただけると他の方の参考にもなり大変助かります。m(＿)m
  * ＞4:3のaviでアスペクト比が正しくないように思われる
