--- a/wiki/Informations.wiki
+++ b/wiki/Informations.wiki
@@ -2,7 +2,7 @@
 
 = 追加情報 =
 
- * http://oss.netfarm.it/mplayer-win32.php にて、MPlayer/MEncoder rev 34118 の配布が開始されましたが、当方で試す限り、音ずれなどの問題が発生します。そのような症状が出てしまう場合は、http://sourceforge.net/projects/mplayer-win32/files/MPlayer%20and%20MEncoder/ の rev 33883 を使用してください。<br>なお、そのような症状は、-vf harddup を指定しなければ発生しないようなので、BMS v1.2.120120 以降では、-vf harddup を指定しないようにして様子を見ています。
+ * http://oss.netfarm.it/mplayer-win32.php にて、MPlayer/MEncoder rev 34118 の配布が開始されましたが、当方で試す限り、音ずれなどの問題が発生します。そのような症状が出てしまう場合は、http://sourceforge.net/projects/mplayer-win32/files/MPlayer%20and%20MEncoder/ の rev 33883 を使用してください。
 
 
  * 204氏によりますと、ブラビア EX700 では、DLNA.ORG_PN=AVC_TS_HD_60_AC3_ISO の指定で、AC-3 音声以外も再生できるとのことです。
