--- a/wiki/Informations.wiki
+++ b/wiki/Informations.wiki
@@ -2,7 +2,7 @@
 
 = 追加情報 =
 
- * http://oss.netfarm.it/mplayer-win32.php にて、MPlayer/MEncoder rev 34118 の配布が開始されましたが、当方で試す限り、音ずれなどの問題が発生します。そのような症状が出てしまう場合は、http://sourceforge.net/projects/mplayer-win32/files/MPlayer%20and%20MEncoder/ の rev 33883 を使用してください。<br>http://www.spirton.com/ で配布されている mencoder の最新ビルドでもやはり同様の症状が発生します。<br>ただ、-vf オプションから harddup を外すか、pullup を加える（-vf pullup,harddup とする）と音ずれが発生しないみたいです。副作用が怖いのでデフォルトにするのは見送っていますが、どうしても mencoder の最新ビルドを使用したい方はお試しください。
+ * http://oss.netfarm.it/mplayer-win32.php にて、MPlayer/MEncoder rev 34118 の配布が開始されましたが、当方で試す限り、音ずれなどの問題が発生します。そのような症状が出てしまう場合は、http://sourceforge.net/projects/mplayer-win32/files/MPlayer%20and%20MEncoder/ の rev 33883 を使用してください。<br>http://www.spirton.com/ で配布されている mencoder の最新ビルドでもやはり同様の症状が発生します。<br>ただ、-vf オプションから harddup を外すか、pullup を加える（-vf pullup,harddup とする）か、あるいは -ofps 24000/1001 とすると音ずれは発生しないみたいです。どうにもバグくさいですし、副作用が怖いのでそれらの設定をデフォルトにするのは見送っていますが、どうしても mencoder の最新ビルドを使用したい方はそれらのオプションをお試しください。
 
 
  * 204氏によりますと、ブラビア EX700 では、DLNA.ORG_PN=AVC_TS_HD_60_AC3_ISO の指定で、AC-3 音声以外も再生できるとのことです。
