Edited wiki page Informations through web user interface.

--- a/wiki/Informations.wiki
+++ b/wiki/Informations.wiki
@@ -4,8 +4,6 @@
 
  * http://oss.netfarm.it/mplayer-win32.php にて、MPlayer/MEncoder rev 34118 の配布が開始されましたが、当方で試す限り、音ずれなどの問題が発生します。そのような症状が出てしまう場合は、http://sourceforge.net/projects/mplayer-win32/files/MPlayer%20and%20MEncoder/ の rev 33883 を使用してください。なお、http://www.spirton.com/ で配布されている mencoder の最新ビルドでもやはり同様の症状が発生します。<br>ただ、-vf オプションから harddup を外すか、fixpts を加える（-vf fixpts,harddup とする）か、pullup を加える（-vf pullup,harddup とする）か、あるいは -ofps 24000/1001 とすると音ずれは少なくなるようです。どうにもバグくさいですし、副作用が怖いのでそれらの設定をデフォルトにするのは見送っていますが、どうしても mencoder の最新ビルドを使用したい方はそれらのオプションをお試しください。
 
- * Windows7 において、Windows の起動から一定時間（1分ぐらい？）経過しないと、ネットワーク通信の一部の機能が正常動作しないためか、BMS が無反応になってしまうという症状が出る場合があるようです。現在のところ原因不明ですので、Windows7でスタートアップから自動実行される場合には遅延起動ソフトを用いて遅延起動させるようにしてください。
-
  * 204氏によりますと、ブラビア EX700 では、DLNA.ORG_PN=AVC_TS_HD_60_AC3_ISO の指定で、AC-3 音声以外も再生できるとのことです。
  同じ機種の方は、BRAVIA-KDL-JP5.lua 内の<br>
 {{{
@@ -20,5 +18,7 @@
  * [BRAVIA5_230] - BRAVIA-KDL-JP5.lua で、H264ToMpegTS = true としてもうまくいかない方は参照してください。
 
  * DNS での名前解決に時間がかかる環境で、BMS の反応速度が著しく低下するという症状を確認しました。最新版で対策済みです。うちでは Windows 7 にするとそのような症状になりました。
+
+ * Windows7 において、Windows の起動から一定時間（1分ぐらい？）経過しないと、ネットワーク通信の一部の機能が正常動作しないためか、BMS が無反応になってしまうという症状が出る場合があるようです。最新版で対策を入れてみましたのでお試しください。
 
  * [MP4] - MP4 のストリーミング再生について。
