--- a/wiki/Informations.wiki
+++ b/wiki/Informations.wiki
@@ -2,7 +2,7 @@
 
 = 追加情報 =
 
- * http://oss.netfarm.it/mplayer-win32.php にて、MPlayer/MEncoder rev 34118 の配布が開始されましたが、当方で試す限り、音ずれなどの問題が発生します。そのような症状が出てしまう場合は、http://sourceforge.net/projects/mplayer-win32/files/MPlayer%20and%20MEncoder/ の rev 33883 を使用してください。なお、http://www.spirton.com/ で配布されている mencoder の最新ビルドでもやはり同様の症状が発生します。<br>ただ、-vf オプションから harddup を外すか、fixpts を加える（-vf fixpts,harddup とする）か、pullup を加える（-vf pullup,harddup とする）か、あるいは -ofps 24000/1001 とすると音ずれは少なくなるようです。どうにもバグくさいですし、副作用が怖いのでそれらの設定をデフォルトにするのは見送っていますが、どうしても mencoder の最新ビルドを使用したい方はそれらのオプションをお試しください。
+ * http://oss.netfarm.it/mplayer-win32.php や、http://www.spirton.com/ などで配布されている、Mencoder の最新ビルドでは、当方で試す限り、音ずれなどの問題が発生します。そのため、安定している Mencoder rev 33883 (http://sourceforge.net/projects/mplayer-win32/files/MPlayer%20and%20MEncoder/ で入手できます) を標準で使用し、最新ビルドは mencoder2.exe とリネームして使用しています。スクリプトで最新ビルドを使用したい場合は mencoder となっている箇所を mencoder2 とすれば使用できます。<br>なお、そのような症状は、-vf オプションから harddup を外すか、fixpts を加える（-vf fixpts,harddup とする）か、pullup を加える（-vf pullup,harddup とする）か、あるいは -ofps 24000/1001 とすると音ずれは少なくなるようです。どうにもバグくさいですし、副作用が怖いのでそれらの設定をデフォルトにするのは見送っていますが。
 
  * 204氏によりますと、ブラビア EX700 では、DLNA.ORG_PN=AVC_TS_HD_60_AC3_ISO の指定で、AC-3 音声以外も再生できるとのことです。
  同じ機種の方は、BRAVIA-KDL-JP5.lua 内の<br>
