Edited wiki page Informations through web user interface.

--- a/wiki/Informations.wiki
+++ b/wiki/Informations.wiki
@@ -22,3 +22,5 @@
  * Windows7 において、Windows の起動から一定時間（1分ぐらい？）経過しないと、ネットワーク通信の一部の機能が正常動作しないためか、BMS が無反応になってしまうという症状が出る場合があるようです。最新版で対策を入れてみましたのでお試しください。
 
  * [MP4] - MP4 のストリーミング再生について。
+
+ * ビットレートが高い動画をカクカクさせずに再生させるためには、当然それなりのPC環境が必要になります。例えば 20MBのビットレートの動画をストリーミング再生するためには、1秒間に20MB以上読み込めるHDDと、1秒間に20MB以上の速度で転送できるネットワーク環境が必要であるのは当然です。仮に平時にはその要件が満たされていたとしても、裏でウィルスチェックソフトや自動バックアップソフトなどが動作したために、それらの要件が確保できなくなる可能性もあります。特に、同一のHDDに頻繁にアクセスするソフトが競合すると、速度低下が顕著になるようです。なお、動画のビットレートは付属の MI.exe で調査できます。
