Edited wiki page Informations through web user interface.

--- a/wiki/Informations.wiki
+++ b/wiki/Informations.wiki
@@ -23,4 +23,4 @@
 
  * [MP4] - MP4 のストリーミング再生について。
 
- * ビットレートが高い動画をカクカクさせずに再生させるためには、当然それなりのPC環境が必要になります。例えば 20MBのビットレートの動画をストリーミング再生するためには、1秒間に20MB以上読み込めるHDDと、1秒間に20MB以上の速度で転送できるネットワーク環境が必要であるのは当然です。仮に平時にはその要件が満たされていたとしても、裏でウィルスチェックソフトや自動バックアップソフトなどが動作したために、それらの要件が確保できなくなる可能性もあります。特に、同一のHDDに頻繁にアクセスするソフトが競合すると、速度低下が顕著になるようです。なお、動画のビットレートは付属の MI.exe で調査できます。
+ * ビットレートが高い動画をカクカクさせずに再生させるためには、当然それなりのPC環境が必要になります。例えば 20MBのビットレートの動画をストリーミング再生するためには、1秒間に20MB以上読み込めるHDDと、1秒間に20MB以上の速度で転送できるネットワーク環境が必要であるのは当然です。仮に平時にはその要件が満たされていたとしても、裏でウィルスチェックソフトや自動バックアップソフトなどが動作したために、それらの要件が確保できなくなる可能性もあります。特に、同一のHDDに頻繁にアクセスするソフトが競合すると、速度低下が顕著になるようです（動画再生の際にBMSがファイルをロックするようにすると若干読み出し速度が上がる可能性があるのですが、そうすると逆に他のソフトからのアクセスが遅くなる可能性があるためロックしないようにしています。もっとも、MediaInfo がファイル種別を調査する際にファイルをロックするため、BMS起動直後などはその限りではありません）。なお、動画のビットレートは付属の MI.exe で調査できます。
